--- a/public/style/style.css
+++ b/public/style/style.css
@@ -62,6 +62,16 @@ body{
 
 }
 
+#left_menu ul{
+    padding-left: 0px;
+    margin-left: 5px;
+}
+
+#left_menu li{
+    margin-left: 0px;
+    list-style: none;
+}
+
 #left_menu li a{
     display: block;
 }
@@ -82,6 +92,19 @@ body{
     height: 30px;
     background-color: #e2e3e7;
     font-family: "Arial";
+}
+
+#news_categories ul{
+    margin: 0px;
+
+}
+
+#news_categories ul li{
+    margin-top: 6px;
+    float: left;
+    list-style: none;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .individual_news_container{
@@ -116,6 +139,7 @@ body{
 }
 
 #rodape{
+    width: 100%;
     clear: both;
     position: relative;
     float: left;
@@ -124,6 +148,14 @@ body{
     text-align: center;
     vertical-align: middle;
     color: #ffffff;
+}
+
+#rodape p{
+
+    height: 100%;
+    margin:0px;
+    padding-top: 5px;
+    padding-bottom: 0px;
 }
 
 a:hover{
